# airflow-memray

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.astro/: config.yaml
.github/: CODEOWNERS
.github/workflows/: publish.yml
airflow_memray/: __init__.py  core.py  plugin.py  policies.py
changelog.d/: 1.added.md  3.fixed.md
dags/: memray_demo.py
